--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 log.txt
+/Generating data/Dynamics.ame
+/Generating data/line_data.mat
+/Generating data/line_data1.mat
+/Generating data/Planner.mat
+/Generating data/Planner.mexw64
+/Generating data/Datasets
+/Generating data/DoubleLaneChange_.props
+/Generating data/DoubleLaneChange_.tools
+/Generating data/Figures
+/Generating data/old
+/Generating data/Old Versions
+/Generating data/qpoases
+/Generating data/slprj
+
