--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,43 @@ log.txt
 /Generating data/Old Versions
 /Generating data/qpoases
 /Generating data/slprj
+/Generating data/Dynamics_.000.png
+/Generating data/Dynamics_.amegp
+/Generating data/Dynamics_.amegp.original
+/Generating data/Dynamics_.ameperf
+/Generating data/Dynamics_.c
+/Generating data/Dynamics_.cir
+/Generating data/Dynamics_.data
+/Generating data/Dynamics_.data.original
+/Generating data/Dynamics_.h
+/Generating data/Dynamics_.jac0
+/Generating data/Dynamics_.jac1
+/Generating data/Dynamics_.jac2
+/Generating data/Dynamics_.jac3
+/Generating data/Dynamics_.jac4
+/Generating data/Dynamics_.la
+/Generating data/Dynamics_.lock
+/Generating data/Dynamics_.make
+/Generating data/Dynamics_.make.bck
+/Generating data/Dynamics_.make.link_args
+/Generating data/Dynamics_.mask
+/Generating data/Dynamics_.mexw64
+/Generating data/Dynamics_.modelinfo
+/Generating data/Dynamics_.o
+/Generating data/Dynamics_.obj
+/Generating data/Dynamics_.param
+/Generating data/Dynamics_.pl
+/Generating data/Dynamics_.results
+/Generating data/Dynamics_.sad
+/Generating data/Dynamics_.sim
+/Generating data/Dynamics_.ssf
+/Generating data/Dynamics_.state
+/Generating data/Dynamics_.studyparam
+/Generating data/Dynamics_.units
+/Generating data/Dynamics_.var
+/Generating data/Dynamics_.views
+/Generating data/Dynamics_.vl.active
+/Generating data/Dynamics_.vl.crc_3022584533
+/Generating data/Dynamics_.props/
+
 
