--- a/.gitignore
+++ b/.gitignore
@@ -50,5 +50,7 @@ log.txt
 /Generating data/Dynamics_.vl.active
 /Generating data/Dynamics_.vl.crc_3022584533
 /Generating data/Dynamics_.props/
+/Generating data/Dynamics_.vl.crc_2375350113
+
 
 
