--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,6 @@ log.txt
 /Generating data/Dynamics_.vl.crc_3022584533
 /Generating data/Dynamics_.props/
 /Generating data/Dynamics_.vl.crc_2375350113
-
+/Generating data/main.asv
 
 
