13-04-17-20-now switch to tracking mpc

--- a/.gitignore
+++ b/.gitignore
@@ -52,5 +52,7 @@ log.txt
 /Generating data/Dynamics_.props/
 /Generating data/Dynamics_.vl.crc_2375350113
 /Generating data/main.asv
+/Generating data/PlanningFunction_lane_change.asv
+/Generating data/generating_data_lane_change.slx.autosave
 
 
