--- a/.gitignore
+++ b/.gitignore
@@ -54,5 +54,75 @@ log.txt
 /Generating data/main.asv
 /Generating data/PlanningFunction_lane_change.asv
 /Generating data/generating_data_lane_change.slx.autosave
-
+/learning model/written_data_detailed/
+/Generating data_tracking/Dynamics.ame
+/Generating data_tracking/line_data.mat
+/Generating data_tracking/line_data1.mat
+/Generating data_tracking/Planner.mat
+/Generating data_tracking/Planner.mexw64
+/Generating data_tracking/Datasets
+/Generating data_tracking/DoubleLaneChange_.props
+/Generating data_tracking/DoubleLaneChange_.tools
+/Generating data_tracking/Figures
+/Generating data_tracking/old
+/Generating data_tracking/Old Versions
+/Generating data_tracking/qpoases
+/Generating data_tracking/slprj
+/Generating data_tracking/Dynamics_.000.png
+/Generating data_tracking/Dynamics_.amegp
+/Generating data_tracking/Dynamics_.amegp.original
+/Generating data_tracking/Dynamics_.ameperf
+/Generating data_tracking/Dynamics_.c
+/Generating data_tracking/Dynamics_.cir
+/Generating data_tracking/Dynamics_.data
+/Generating data_tracking/Dynamics_.data.original
+/Generating data_tracking/Dynamics_.h
+/Generating data_tracking/Dynamics_.jac0
+/Generating data_tracking/Dynamics_.jac1
+/Generating data_tracking/Dynamics_.jac2
+/Generating data_tracking/Dynamics_.jac3
+/Generating data_tracking/Dynamics_.jac4
+/Generating data_tracking/Dynamics_.la
+/Generating data_tracking/Dynamics_.lock
+/Generating data_tracking/Dynamics_.make
+/Generating data_tracking/Dynamics_.make.bck
+/Generating data_tracking/Dynamics_.make.link_args
+/Generating data_tracking/Dynamics_.mask
+/Generating data_tracking/Dynamics_.mexw64
+/Generating data_tracking/Dynamics_.modelinfo
+/Generating data_tracking/Dynamics_.o
+/Generating data_tracking/Dynamics_.obj
+/Generating data_tracking/Dynamics_.param
+/Generating data_tracking/Dynamics_.pl
+/Generating data_tracking/Dynamics_.results
+/Generating data_tracking/Dynamics_.sad
+/Generating data_tracking/Dynamics_.sim
+/Generating data_tracking/Dynamics_.ssf
+/Generating data_tracking/Dynamics_.state
+/Generating data_tracking/Dynamics_.studyparam
+/Generating data_tracking/Dynamics_.units
+/Generating data_tracking/Dynamics_.var
+/Generating data_tracking/Dynamics_.views
+/Generating data_tracking/Dynamics_.vl.active
+/Generating data_tracking/Dynamics_.vl.crc_3022584533
+/Generating data_tracking/Dynamics_.props/
+/Generating data_tracking/Dynamics_.vl.crc_2375350113
+/Generating data_tracking/main.asv
+/Generating data_tracking/PlanningFunction_lane_change.asv
+/Generating data_tracking/generating_data_lane_change.slx.autosave
+/Generating data_tracking/*
+!Generating data_tracking/Function_generation.py
+!Generating data_tracking/Function_generation.m
+!Generating data_tracking/generating_data_lane_change.slx
+!Generating data_tracking/Function_generation.m
+!Generating data_tracking/Function_generation.m
+!Generating data_tracking/get_data.m
+!Generating data_tracking/import_ideal_data.py
+!Generating data_tracking/main.m
+!Generating data_tracking/PlanningFunction_lane_change.m
+!Generating data_tracking/PlanningFunction.m
+!Generating data_tracking/previous_solution.mat
+!Generating data_tracking/tracking_mpc.m
+/Generating data/__pycache__/import_ideal_data.cpython-37.pyc
+/learning model/__pycache__/import_ideal_data.cpython-37.pyc
 
