--- a/.gitignore
+++ b/.gitignore
@@ -128,4 +128,4 @@ log.txt
 /learning model/written_data_detailed_fixed_time/
 /learning model/written_data/
 /learning model/written_dataset/
-
+/tracking_non_linear_VM/
