16-04-before hot starting and extra constraints

--- a/.gitignore
+++ b/.gitignore
@@ -128,4 +128,5 @@ log.txt
 /learning model/written_data_detailed_fixed_time/
 /learning model/written_data/
 /learning model/written_dataset/
+/learning model/used_data/
 /tracking_non_linear_VM/DATA2_V22.22_L3.47.csv
