28-04-20-different_maneuver_and_cleaned_not_used_stuff

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,4 @@ log.txt
 /learning model/used_data/
 /tracking_non_linear_VM/DATA2_V22.22_L3.47.csv
 /learning model working non-linear model/
+/learning model/not_used on moment
