--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@ log.txt
 /tracking_non_linear_VM/DATA2_V22.22_L3.47.csv
 /learning model working non-linear model/
 /learning model/not_used on moment
+/Correcting/reading_dataset/
