01-05-11-00-working gen data

--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,5 @@ log.txt
 /learning model working non-linear model/
 /learning model/not_used on moment
 /Correcting/reading_dataset/
+/Correcting/01-05/reading_dataset/
+/Correcting/01-05/afbeeldingen/
