--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,8 @@ log.txt
 /Correcting/reading_dataset/
 /Correcting/01-05/reading_dataset/
 /Correcting/01-05/afbeeldingen/
+/Correcting/01-05/clean version/reading_dataset
+/Correcting/01-05/analytical acc/reading_dataset/
+/Correcting/01-05/writting_C/
+
+
