2-5-started working on analytical

--- a/.gitignore
+++ b/.gitignore
@@ -138,5 +138,5 @@ log.txt
 /Correcting/01-05/clean version/reading_dataset
 /Correcting/01-05/analytical acc/reading_dataset/
 /Correcting/01-05/writting_C/
-
+/Correcting/01-05/analytical acc/writting_C
 
