--- a/.gitignore
+++ b/.gitignore
@@ -139,4 +139,6 @@ log.txt
 /Correcting/01-05/analytical acc/reading_dataset/
 /Correcting/01-05/writting_C/
 /Correcting/01-05/analytical acc/writting_C
+/Correcting/01-05/Sending/
+
 
