--- a/.gitignore
+++ b/.gitignore
@@ -140,5 +140,7 @@ log.txt
 /Correcting/01-05/writting_C/
 /Correcting/01-05/analytical acc/writting_C
 /Correcting/01-05/Sending/
+/Correcting/04-05/Sending/reading_dataset/
+
 
 
