--- a/.gitignore
+++ b/.gitignore
@@ -141,6 +141,6 @@ log.txt
 /Correcting/01-05/analytical acc/writting_C
 /Correcting/01-05/Sending/
 /Correcting/04-05/Sending/reading_dataset/
-
+/Correcting/04-05/reading_dataset/
 
 
