--- a/.gitignore
+++ b/.gitignore
@@ -142,5 +142,5 @@ log.txt
 /Correcting/01-05/Sending/
 /Correcting/04-05/Sending/reading_dataset/
 /Correcting/04-05/reading_dataset/
-
-
+/Correcting/04-05/writting_C
+/Correcting/04-05/analytical_update.zip
