07-05-average_no_FT-fully_checked en lam sol added

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,5 @@ log.txt
 /Correcting/04-05/reading_dataset/
 /Correcting/04-05/writting_C
 /Correcting/04-05/analytical_update.zip
+/learning model/results/
+
