--- a/.gitignore
+++ b/.gitignore
@@ -158,4 +158,17 @@ log.txt
 !Generating data_tracking_jerk_model/previous_solution.mat
 !Generating data_tracking_jerk_model/tracking_mpc.m
 !Generating data_tracking_jerk_model/deriv2.m
+/Generating data_tracking_jerk_model_acc_implementation/*
+!Generating data_tracking_jerk_model_acc_implementation/Function_generation.py
+!Generating data_tracking_jerk_model_acc_implementation/Function_generation.m
+!Generating data_tracking_jerk_model_acc_implementation/generating_data_lane_change.slx
+!Generating data_tracking_jerk_model_acc_implementation/Function_generation.m
+!Generating data_tracking_jerk_model_acc_implementation/get_data.m
+!Generating data_tracking_jerk_model_acc_implementation/import_ideal_data.py
+!Generating data_tracking_jerk_model_acc_implementation/main.m
+!Generating data_tracking_jerk_model_acc_implementation/PlanningFunction_lane_change.m
+!Generating data_tracking_jerk_model_acc_implementation/PlanningFunction.m
+!Generating data_tracking_jerk_model_acc_implementation/previous_solution.mat
+!Generating data_tracking_jerk_model_acc_implementation/tracking_mpc.m
+!Generating data_tracking_jerk_model_acc_implementation/deriv2.m
 
