--- a/.gitignore
+++ b/.gitignore
@@ -145,4 +145,8 @@ log.txt
 /Correcting/04-05/writting_C
 /Correcting/04-05/analytical_update.zip
 /learning model/results/
+/Complex_learning/
+/Generating data_tracking_jerk_model/
+/Generating data_tracking_jerk_model_acc_implementation/
+
 
